--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -416,10 +416,10 @@
 287	UNIMPL	nosys
 288	UNIMPL	nosys
 ; 289 and 290 from NetBSD (OpenBSD: 267 and 268)
-289	STD	{ ssize_t extpreadv(int fd, struct iovec *iovp, \
-				  u_int iovcnt, int flags, off_t offset); }
-290	STD	{ ssize_t extpwritev(int fd, struct iovec *iovp,\
-				  u_int iovcnt, int flags, off_t offset); }
+289	STD	{ ssize_t extpreadv(int fd, const struct iovec *iovp, \
+				  int iovcnt, int flags, off_t offset); }
+290	STD	{ ssize_t extpwritev(int fd, const struct iovec *iovp, \
+				  int iovcnt, int flags, off_t offset); }
 291	UNIMPL	nosys
 292	UNIMPL	nosys
 293	UNIMPL	nosys
