--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -748,3 +748,5 @@
 545	STD	{ int lwp_getaffinity(pid_t pid, lwpid_t tid, cpumask_t *mask); }
 546	STD	{ int lwp_create2(struct lwp_params *params, const cpumask_t *mask); }
 547	STD	{ int getcpuclockid(pid_t pid, lwpid_t lwp_id, clockid_t *clock_id); }
+548	STD	{ int wait6(idtype_t idtype, id_t id, int *status, int options, \
+				struct __wrusage *wrusage, siginfo_t *info); }
