libc: Change getlogin_r()'s second argument to size_t, as POSIX likes it.
https://pubs.opengroup.org/onlinepubs/9699919799/functions/getlogin.html

Also adjust the getconf syscall, aka _getconf() in userland, which is
called by getconf(3) and getconf_r(3).

Approved-by: dillon
Tested-by:   zrj

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -99,7 +99,7 @@
 46	OBSOL	freebsd3_sigaction
 47	STD	{ gid_t getgid(void); }
 48	OBSOL	freebsd3_sigprocmask
-49	STD	{ int getlogin(char *namebuf, u_int namelen); }
+49	STD	{ int getlogin(char *namebuf, size_t namelen); }
 50	STD	{ int setlogin(char *namebuf); }
 51	STD	{ int acct(char *path); }
 52	OBSOL	freebsd3_sigpending
