kernel - Add __realpath() and getrandom() system calls
* Add a kernel __realpath() system call.  libc must still implement
  the realpath() function to handle NULL buffers (malloc()d buffer
  returned).

  The libc implementation checks the osversion for backwards compatibility
  before attempting to use the new system call.

* Add a kernel getrandom() system call.

* Bump __DragonFly_version to 500710.

Suggested-by: tuxillo, mjg

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -734,3 +734,5 @@
 548	STD	{ int wait6(idtype_t idtype, id_t id, int *status, int options, \
 				struct __wrusage *wrusage, siginfo_t *info); }
 549	STD	{ int lwp_getname(lwpid_t tid, char *name, size_t len); }
+550	STD	{ ssize_t getrandom(void *buf, size_t len, unsigned flags); }
+551	STD	{ ssize_t __realpath(const char *path, char *buf, size_t len); }
